# ObsidianOS

./: .gitignore  README.md  component_classes.txt  fix-row-item.mjs  fix-row-item2.mjs  fix1.cjs  index.html  package-lock.json  package.json  patch_app.cjs  patch_chat.js  replace.mjs  replace_radii.mjs  vite.config.ts
.github/workflows/: deploy-pages.yml
docs/: index.html
docs/assets/: App-BGT5_7Ic.css  App-BHJNcBOt.css  App-BM0prEL1.css  App-BPZ4sbUr.js  App-Ba6LAFkd.js  App-Bf2IbmqB.css  App-BkRkZEYa.js  App-BonPgEMg.js  App-C9GUJEuS.css  App-CFH5lQ7U.css  App-CMsRilbm.js  App-CQl_9gF-.js  App-CYJGwEJY.css  App-CnjvS9qa.css  App-Cqq0BoZG.js  App-D-pNWu4u.css  App-D4ikRl1h.js  App-D66SArrO.js  App-Dg94ea2C.css  App-DhspviY2.js  App-DilKnaQO.js  App-DojVprWH.css  App-Dwg974DV.js  BrandMark-BFwGobyb.js  BrandMark-BTL28Q9u.js  BrandMark-C6YJF7Cf.js  BrandMark-CAmk8GSQ.js  BrandMark-CH528jnL.js  BrandMark-CMvNDYr5.js  BrandMark-CTrYsRhq.js  BrandMark-CXhNyiir.js  BrandMark-DPt34bmL.js  BrandMark-DicANKA0.js  BrandMark-DmD1144Y.js  BrandMark-tK8-VPVY.js  LandingPage-BA2khO2B.js  LandingPage-BLXExJud.js  LandingPage-BfhTRGxl.js  LandingPage-CG0x4bxq.js  LandingPage-CRvp-Jut.js  (+35 more)
landing/: index.html
landing/assets/: App-CQY9zpGN.js  (+6 more)
src/: App.css  App.tsx  aiWorkbench.ts  api.ts  appMetadata.ts  examConfig.ts  lib.test.ts  lib.ts  main.tsx  mockApi.ts  types.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  db.rs  lib.rs  main.rs  markdown.rs  models.rs
(+16 files in other folders)
