[package]
name = "obsidian-exam-os"
version = "0.1.0"
description = "ObsidianOS"
authors = ["maxwi"]
edition = "2021"
default-run = "obsidian-exam-os"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "obsidian_exam_os_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.98"
chrono = { version = "0.4.42", features = ["serde"] }
csv = "1.4.0"
json5 = "0.4.1"
regex = "1.12.2"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
sha2 = "0.10.9"
uuid = { version = "1.22.0", features = ["v4", "serde"] }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.20.0"
